# eDucation

backend/: .env.sample  Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20221220_142533_teacher.rs
backend/src/: database.rs  main.rs  server.rs
backend/src/api/teachers/: mod.rs  teacher_controller.rs  teacher_model.rs  teacher_router.rs
backend/src/controllers/: teacher.rs
backend/src/entities/: mod.rs  prelude.rs  teacher.rs
backend/src/routes/: mod.rs  teacher.rs
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: StudentsList.vue  TeachersList.vue  TheSidebar.vue
frontend/src/components/modals/: LastCallExitClass.vue
frontend/src/router/: index.js
frontend/src/store/: store.js
frontend/src/store/modules/: classes.js  students.js
frontend/src/views/: ClassNotFound.vue  Classroom.vue  Overview.vue
