[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Luca Suntinger", "Fabian Wassermann"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
axum = "0.6"
tower-http = { version = "0.3.5", features = ["trace"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
dotenvy = "0.15.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "postgres", "json"] }
sea-orm = { version = "0.10.5", features = ["macros", "runtime-tokio", "sqlx-postgres"] }